--- a/src/style/App.css
+++ b/src/style/App.css
@@ -19,26 +19,27 @@ header {
   width: 100%;
   display: flex;
   justify-content: center;
-  padding: 1.87rem 0px;
+  padding: 1.87rem 0;
 }
 
 nav {
-  width: 100%;
-  max-width: 1200px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 100%;
+  max-width: 1200px;
+  padding: 0 2rem;
 }
 
 .nav-items {
-  margin-left: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
-  color: var(--clr-grey);
+  gap: 3rem;
+  margin-left: auto;
   font-size: 1.25rem;
   font-weight: 500;
-  gap: 3rem;
+  color: var(--clr-grey);
 }
 
 .nav-items span {
@@ -53,15 +54,13 @@ nav {
   color: black;
 }
 
-.logo {
+.nav-logo {
   width: 218px;
   cursor: pointer;
 }
 
 .nav-menu {
   display: none;
-  height: 100%;
-  width: 50px;
   position: relative;
 }
 
@@ -85,9 +84,6 @@ nav {
 @media (max-width: 1200px) {
   .nav-items {
     display:none;
-  }
-  nav {
-    padding: 0 2rem;
   }
   .nav-menu {
     display: inherit;
