exchangelist external link fix and spinner

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -137,14 +137,14 @@ nav {
   flex-direction: column;
   width: 100%;
   max-width: 1200px;
-  padding-top: 15px;
+  margin-top: 3rem;
 }
 
 .exchangeListHeader {
   display: flex;
   flex-direction: column;
   padding: 0 15px;
-  margin-bottom: 30px;
+  margin-bottom: 3rem;
   color: var(--clr-grey);
 }
 
@@ -241,6 +241,12 @@ nav {
   color: black;
 }
 
+@media (max-width: 950px) {
+  .exchangeItem {
+    width: 50%;
+  }
+}
+
 @media (max-width: 570px) {
   .exchangeItem {
     width: 100%;
@@ -255,4 +261,28 @@ nav {
   width: 100%;
   max-width: 1200px;
   padding: 1rem 15px;
+}
+
+/* Spinner */
+
+.spinnerBox {
+  margin: auto;
+}
+
+.threeQuarterSpinner {
+  width: 50px;
+  height: 50px;
+  border: 3px solid var(--clr-green);
+  border-top: 3px solid transparent;
+  border-radius: 50%;
+  animation: spin .5s linear 0s infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0);
+  }
+  to{
+    transform: rotate(359deg);
+  }
 }
