--- a/src/style/App.css
+++ b/src/style/App.css
@@ -269,14 +269,14 @@ nav {
   align-items: center;
   font-weight: bold;
   font-size: 4rem;
+  flex-wrap: wrap;
   gap: 2rem;
 }
 
 @media (max-width: 650px) {
   .exchangeViewHeader {
-    align-items: flex-start;
-    flex-direction: column;
-    font-size: 4rem;
+    font-size: 2rem;
+    gap: 1rem;
   }
 }
 
@@ -285,6 +285,7 @@ nav {
 }
 
 .exchangeViewHeader img {
+  vertical-align: sub;
   width: 75px;
 }
 
@@ -294,7 +295,7 @@ nav {
 
 .exchangeViewHeader i {
   vertical-align: middle;
-  margin-left: 2rem;
+  margin-right: 2rem;
   font-size: 2rem;
 }
 
