readme update, removed extra create react app files, recased css classnames

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -25,12 +25,12 @@ a {
   --alt-grey: #7C8499;
 }
 
-.bg-white {
-  background-color: white;
+.reg-font {
+  font-size: 1rem;
 }
 
-.mr-s {
-  margin-right: 10px;
+.bg-white {
+  background-color: white;
 }
 
 .flex {
@@ -39,13 +39,14 @@ a {
 
 .container {
   min-height: 100vh;
-  padding-top: 80.43px;
+  padding-top: 5rem;
   display: flex;
   justify-content: center;
   overflow-y: overlay;
 }
 
 body {
+  margin: 0;
   background-color: var(--bg-grey);
   font-stretch: normal;
   line-height: 1.64;
@@ -59,7 +60,7 @@ header {
   position: absolute;
   top: 0;
   left: 0;
-  height: 80.43px;
+  height: 5rem;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -95,10 +96,16 @@ nav {
 }
 
 .nav-items i {
-  margin-right: 10px;
+  margin-right: .5rem;
+}
+
+.nav-logo-container {
+  display: flex;
+  align-items: center;
 }
 
 .nav-logo {
+  height: 47px;
   width: 218px;
   cursor: pointer;
 }
@@ -136,29 +143,28 @@ nav {
 
 /* ExchangeList Page */
 
-.exchangeList {
+.exchange-list {
   display: flex;
   flex-direction: column;
   width: 100%;
   max-width: 1200px;
-  margin-top: 3rem;
+  padding: 3rem 0 0;
 }
 
-.exchangeListHeader {
+.exchange-list-header {
   display: flex;
   flex-direction: column;
-  padding: 0 15px;
-  margin-bottom: 3rem;
+  padding: 0 15px 2rem;
   color: var(--clr-grey);
 }
 
-.exchangeListTitle {
+.exchange-list-title {
   font-size: 3rem;
   font-weight: bold;
   color: black;
 }
 
-.exchangeListTable {
+.exchange-list-table {
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -168,7 +174,7 @@ nav {
 
 /* ExchangeItem Component */
 
-.exchangeItem {
+.exchange-item {
   width: 25%;
   padding: 0 15px;
   margin-bottom: 30px;
@@ -176,7 +182,7 @@ nav {
   color: var(--clr-grey)
 }
 
-.exchangeItemContent {
+.exchange-item-content {
   height: 100%;
   background: white;
   display: flex;
@@ -185,40 +191,34 @@ nav {
   align-items: center;
 }
 
-.exchangeItemContent:hover {
+.exchange-item-content:hover {
   box-shadow: rgb(125 132 153 / 4%) 0px 2px 4px 0px, rgb(125 132 153 / 20%) 0px 4px 18px 0px;
   transform: scale(1.03);
   z-index: 5;
 }
 
-.exchangeItemTitle {
+.exchange-item-title {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1rem 2rem;
-  color: var(--clr-grey);
-  font-weight: 600;
 }
 
-.exchangeItemName {
+.exchange-item-name {
+  font-weight: 600;
   color: var(--clr-grey);
   cursor: pointer;
 }
 
-.exchangeItemName:hover {
+.exchange-item-name:hover {
   color: black;
 }
 
-.exchangeItemCountry {
-  font-size: 1rem;
-  font-weight: normal;
-}
-
-.exchangeItemContent img {
+.exchange-item-content img {
   margin: 3rem 0;
 }
 
-.exchangeItemDetails {
+.exchange-item-details {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -226,11 +226,11 @@ nav {
   font-size: 1rem;
 }
 
-.exchangeItemDetails span:nth-child(2) {
+.exchange-item-details span:nth-child(2) {
   color: black;
 }
 
-.exchangeItemButton {
+.exchange-item-button {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -241,25 +241,25 @@ nav {
   cursor: pointer;
 }
 
-.exchangeItemButton:hover {
-  color: black;
+.exchange-item-button:hover {
+  color: var(--clr-grey);
 }
 
 @media (max-width: 950px) {
-  .exchangeItem {
+  .exchange-item {
     width: 50%;
   }
 }
 
 @media (max-width: 570px) {
-  .exchangeItem {
+  .exchange-item {
     width: 100%;
   }
 }
 
 /* ExchangeView Page */
 
-.exchangeView {
+.exchange-view {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -268,7 +268,7 @@ nav {
   gap: 3rem;
 }
 
-.exchangeViewHeader {
+.exchange-view-header {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -277,64 +277,65 @@ nav {
   gap: 2rem;
 }
 
-@media (max-width: 500px) {
-  .exchangeViewHeader {
+@media (max-width: 600px) {
+  .exchange-view-header {
     font-size: 2rem;
   }
 }
 
-.exchangeViewHeader a {
-  display: contents;
+.exchange-view-header a {
+  display: flex;
 }
 
-.exchangeViewHeader img {
-  vertical-align: sub;
+.exchange-view-header img {
   width: 75px;
 }
 
-.exchangeViewHeader div {
-  font-weight: bold;
+.exchange-view-socials {
+  display: flex;
+  gap: 1rem;
 }
 
-.exchangeViewHeader i {
+.exchange-view-header i {
   vertical-align: middle;
-  margin-right: 2rem;
   color: var(--clr-grey);
   font-size: 2rem;
 }
 
-.exchangeViewHeader i:hover {
+.exchange-view-header i:hover {
   color: black;
 }
 
-.exchangeViewDetails {
+.exchange-view-details {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
   font-size: 1.5rem;
 }
 
-.exchangeViewDetails span {
+.exchange-view-details span {
   color: var(--clr-grey)
 }
 
-.backButton {
-  width: fit-content;
+.exchange-view-nav {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
   font-size: 1.5rem;
   color: var(--clr-grey);
 }
 
-.backButton:hover {
+.exchange-view-nav:hover {
   color: black;
 }
 
 /* Spinner */
 
-.spinnerBox {
+.spinner-box {
   margin: auto;
 }
 
-.threeQuarterSpinner {
+.three-quarter-spinner {
   width: 50px;
   height: 50px;
   border: 3px solid var(--clr-green);
