--- a/src/style/ExchangeItem.css
+++ b/src/style/ExchangeItem.css
@@ -19,6 +19,7 @@
 	box-shadow: rgb(125 132 153 / 4%) 0px 2px 4px 0px,
 		rgb(125 132 153 / 20%) 0px 4px 18px 0px;
 	transform: scale(1.03);
+	transition: transform 0.3s ease 0s, box-shadow 0.3s ease 0s;
 	z-index: 5;
 }
 
